fix(index-bar): fix the bug of overlap

--- a/packages/varlet-ui/src/sticky/sticky.less
+++ b/packages/varlet-ui/src/sticky/sticky.less
@@ -1,4 +1,6 @@
 .var-sticky {
+  position: relative;
+
   &--css-mode {
     position: sticky;
     position: -webkit-sticky;
